--- a/css/master.css
+++ b/css/master.css
@@ -13,17 +13,21 @@
 }
 
 .sales{
-
   background-color: green;
   position: absolute;
   top: 0;
   right: 0;
 
+
+}
+
+.red{
+  background-color: red;
 }
 
 .heart{
-
-  width: 40px;
-  height: 40px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
 
 }
