--- a/css/master.css
+++ b/css/master.css
@@ -29,9 +29,14 @@ body{
 
 .heart{
   position: absolute;
-  bottom: 0;
-  left: 50%;
+  bottom: 30px;
   display: none;
+  width: 100%;
+  text-align: center;
+  height: 20px;
+  font-size: 30px;
+
+
 }
 
 .row{
